EKS/networking/Fruits-Ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - http:
        paths:
          - pathType: Exact
            path: /apple
            backend:
              service:
                name: apple-service
                port:
                  number: 5678
          - pathType: Exact
            path: /apple
            backend:
              service:
                name: banana-service
                port:
                  number: 5678
